@@ -141,8 +141,6 @@ final public class ParamModelChecker extends PrismComponent
 	private Lumper.BisimType bisimType;
 	private boolean simplifyRegions;
 
-	private ModelBuilder modelBuilder;
-	
 	/**
 	 * Constructor
 	 */
@@ -263,7 +261,7 @@ final public class ParamModelChecker extends PrismComponent
 		// Store result
 		result = new Result();
 		vals.clearExceptInit();
-		result.setResult(new ParamResult(mode, vals, modelBuilder, functionFactory));
+		result.setResult(new ParamResult(mode, vals, functionFactory));
 		
 		/* // Output plot to tex file
 		if (paramLower.length == 2) {
@@ -328,6 +326,9 @@ final public class ParamModelChecker extends PrismComponent
 			break;
 		case ExpressionBinaryOp.DIVIDE:
 			regionOp = Region.DIVIDE;
+			break;
+		case ExpressionBinaryOp.POW:
+			regionOp = Region.POW;
 			break;
 		default:
 			throw new PrismNotSupportedException("operator \"" + ExpressionBinaryOp.opSymbols[parserOp]
@@ -736,7 +737,7 @@ final public class ParamModelChecker extends PrismComponent
 			// Compute count
 			int count = vals.countOverBitSet(bsFilter);
 			// Store as object/vector
-			resObj = new Integer(count);
+			resObj = Integer.valueOf(count);
 			resVals = new RegionValues(expr.getType(), resObj, model); 
 			// Create explanation of result and print some details to log
 			resultExpl = filterTrue ? "Count of satisfying states" : "Count of satisfying states also in filter";
@@ -796,7 +797,7 @@ final public class ParamModelChecker extends PrismComponent
 				// Check "for all" over filter
 				b = vals.forallOverBitSet(bsFilter);
 				// Store as object/vector
-				resObj = new Boolean(b);
+				resObj = Boolean.valueOf(b);
 				resVals = new RegionValues(expr.getType(), resObj, model); 
 				// Create explanation of result and print some details to log
 				resultExpl = "Property " + (b ? "" : "not ") + "satisfied in ";
@@ -825,7 +826,7 @@ final public class ParamModelChecker extends PrismComponent
 			// Check "there exists" over filter
 			b = vals.existsOverBitSet(bsFilter);
 			// Store as object/vector
-			resObj = new Boolean(b);
+			resObj = Boolean.valueOf(b);
 			resVals = new RegionValues(expr.getType(), resObj, model); 
 			// Create explanation of result and print some details to log
 			resultExpl = "Property satisfied in ";
@@ -1135,7 +1136,7 @@ final public class ParamModelChecker extends PrismComponent
 						varMap[i] = i;
 					}
 					Expression exprState = (Expression) expr.deepCopy().evaluatePartially(statesList.get(state), varMap);
-					Function newReward = modelBuilder.expr2function(functionFactory, exprState);
+					Function newReward = functionFactory.expr2function(exprState, constantValues);
 					for (int choice = model.stateBegin(state); choice < model.stateEnd(state); choice++) {
 						Function sumOut = model.sumLeaving(choice);
 						Function choiceReward;
@@ -1249,9 +1250,4 @@ final public class ParamModelChecker extends PrismComponent
 	public static void closeDown() {
 		ComputerThreads.terminate();
 	}
-
-	public void setModelBuilder(ModelBuilder builder)
-	{
-		this.modelBuilder = builder;
-	}	
 }
